@@ -1,5 +1,10 @@
 Change Log
 
+20180523 SCL
+- when RTC not defined, g++ bug pops out:
+	open_evse:2384: error: unable to find a register to spill in class 'NO_REGS'
+  -> add GPPBUGKLUDGE
+	
 D5.0.0 20180518 SCL
 - implement $F1 RAPI command to simulate front panel short press
 - SAFETY: don't allow $SC to raise current capacity during over temperature event
